--- a/AdminLTE/index.html
+++ b/AdminLTE/index.html
@@ -35,10 +35,10 @@
     <!-- script src="https://www.gstatic.com/firebasejs/4.3.1/firebase.js"></script>
     <script src="system/js/fcm.js"></script -->
     {% endverbatim %}
-    <link id="pb-file" rel="import" href="composer/vendor/hostlink/r-alt/plugins/pb.1.0.0/pb.html">
-    <link id="alt-file" rel="import" href="composer/vendor/hostlink/r-alt/plugins/alt.1.0.0/alt.html">
-    <link id="rt-file" rel="import" href="composer/vendor/hostlink/r-alt/plugins/rt.2.0.0/rt.html">
-    <link id="bs-file" rel="import" href="composer/vendor/hostlink/r-alt/plugins/bs.1.0.0/bs.html">
+    <link id="pb-file" rel="import" href="{{system_base}}/plugins/pb.1.0.0/pb.html">
+    <link id="alt-file" rel="import" href="{{system_base}}/plugins/alt.1.0.0/alt.html">
+    <link id="rt-file" rel="import" href="{{system_base}}/plugins/rt.2.0.0/rt.html">
+    <link id="bs-file" rel="import" href="{{system_base}}/plugins/bs.1.0.0/bs.html">
 </head>
 
 <body class="hold-transition {{skin}}
