rt table page number reset when search again

--- a/AdminLTE/index.html
+++ b/AdminLTE/index.html
@@ -35,10 +35,10 @@
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
     {% endif %}
 
-    <link id="pb-file" rel="import" href="{{system_base}}/plugins/pb.1.0.0/pb.html?v={{system.version}}">
-    <link id="alt-file" rel="import" href="{{system_base}}/plugins/alt.1.0.0/alt.html?v={{system.version}}">
-    <link id="rt-file" rel="import" href="{{system_base}}/plugins/rt.2.0.0/rt.html?v={{system.version}}">
-    <link id="bs-file" rel="import" href="{{system_base}}/plugins/bs.1.0.0/bs.html?v={{system.version}}">
+    <link id="pb-file" rel="import" href="{{system_base}}/plugins/pb.1.0.0/pb.html?v={{system.version}}&t={{t}}">
+    <link id="alt-file" rel="import" href="{{system_base}}/plugins/alt.1.0.0/alt.html?v={{system.version}}&t={{t}}">
+    <link id="rt-file" rel="import" href="{{system_base}}/plugins/rt.2.0.0/rt.html?v={{system.version}}&t={{t}}">
+    <link id="bs-file" rel="import" href="{{system_base}}/plugins/bs.1.0.0/bs.html?v={{system.version}}&t={{t}}">
 </head>
 
 <body class="hold-transition {{skin}}
